--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,10 +1,6 @@
-.container {
-  padding: 0 2rem;
-}
-
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
+  padding: 2rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -42,7 +38,8 @@
 .title {
   margin: 0;
   line-height: 1.15;
-  font-size: 4rem;
+  padding-bottom: 2rem;
+  /* font-size: 4rem; */
 }
 
 .title,
@@ -51,9 +48,9 @@
 }
 
 .description {
-  margin: 4rem 0;
+  /* margin: 4rem 0; */
   line-height: 1.5;
-  font-size: 1.5rem;
+  /* font-size: 1.5rem; */
 }
 
 .code {
