--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,5 @@
 .main {
-  min-height: 100vh;
+  /* min-height: 100vh; */
   padding: 2rem 0;
   flex: 1;
   display: flex;
@@ -15,6 +15,7 @@
   border-top: 1px solid #eaeaea;
   justify-content: center;
   align-items: center;
+  margin-bottom: 4rem;
 }
 
 .footer a {
