--- a/styles/water.css
+++ b/styles/water.css
@@ -740,7 +740,7 @@ details {
   padding: 10px 10px 0;
   margin: 1em 0;
   border-radius: 6px;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 details[open] {
